# pyttilan

./: .gitignore  README.md  README.txt  example.py  pyproject.toml  setup.py
examples/: example.py  example_pl068.py  get_raw_answers.py  raw_output.txt
pytticpx/: __init__.py  pytticpx.py
src/pyttilan/: backend.py  commands.py
src/tests/: test_backend.py  test_commands.py
